--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,93 @@
 /* This is an example of using Sass, otherwise plain CSS works too*/
-$primary-background: pink;
-
+$primary-background: #FFF;
+* {
+  padding: 0;
+  margin: 0; 
+  box-sizing: border-box;
+}
 body {
   background-color: $primary-background;
+  font-family: 'Montserrat', sans-serif;
+  font-family: 'Raleway', sans-serif;
+}
+
+
+
+header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #133337;
+  padding: 0;
+  margin: 0;
+  color: #e6e6fa;
+  color: #FFF;
+  height: 15vh;
+
+  .header-item {
+    margin: 10px;
+  }
+
+  h1 {
+    font-size: 10vh;
+  }
+
+  img {
+    height: 13vh;
+    width: 13vh;
+    // border: 10px solid white;
+    // border-radius: 50px;
+  }
+}
+
+main {
+  text-align: center;
+  
+  .button {
+    display: inline-flex;
+    height: 5vh;
+    width: 40vh;
+    // border: 2px solid #BFC0C0;
+    // margin: 20px 20px 20px 20px;
+    color: #BFC0C0;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: 4vh;
+    letter-spacing: 1.5px;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+  }
+  
+  p {
+    color: #133337;
+    text-decoration: none;
+    letter-spacing: 1px;
+  }
+  
+  #button-4 {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+  }
+  
+  #button-4 p {
+    position: relative;
+    transition: all .45s ease-Out;
+  }
+  
+  #underline {
+    width: 100%;
+    height: 2.5px;
+    margin-top: 15px;
+    align-self: flex-end;
+    left: -40vh;
+    background: #133337;
+    position: absolute;
+    transition: all .3s ease-Out;
+    bottom: 0;
+  }
+  
+  #button-4:hover #underline {
+    left: 0;
+  }
 }
